# esp-idf

./: .gitlab-ci.yml  .gitmodules  .idf_build_apps.toml  .idf_ci.toml  .pre-commit-config.yaml  Kconfig  conftest.py  package.json  pytest.ini
.github/workflows/: docker.yml  issue_comment.yml  new_issues.yml  new_prs.yml  pr_approved.yml
.gitlab/: CODEOWNERS
.gitlab/ci/: build.yml  common.yml  host-test.yml  integration_test.yml  pre_check.yml  rules.yml  static-code-analysis.yml  test-win.yml
components/app_update/: esp_ota_ops.c
components/bootloader/: Kconfig.projbuild
components/bootloader_support/: CMakeLists.txt
components/bt/: CMakeLists.txt  Kconfig
components/bt/controller/: CMakeLists.txt
components/bt/controller/esp32/: bt.c  hli_vectors.S
components/bt/controller/esp32c2/: ble.c  ble_dummy.h  bt.c  dummy.c
components/bt/controller/esp32c3/: bt.c
components/bt/controller/esp32c5/: Kconfig.in  bt.c
components/bt/controller/esp32c6/: Kconfig.in  bt.c
components/bt/controller/esp32h2/: Kconfig.in  bt.c
components/bt/controller/esp32h4/: Kconfig.ble.in  Kconfig.in  ble.c  bt.c
components/bt/controller/esp32s31/: Kconfig.in  bt.c
components/driver/: rtc_module.c
components/esp-tls/: esp_tls_mbedtls.c
components/esp32/: Kconfig  brownout.c  component.mk  cpu_start.c  intr_alloc.c
components/esp_adc/: adc_continuous.c  adc_continuous_internal.h  adc_oneshot.c
components/esp_coex/: Kconfig
components/esp_driver_ana_cmpr/: ana_cmpr.c  ana_cmpr_etm.c  ana_cmpr_private.h
components/esp_driver_dma/: CMakeLists.txt
components/esp_driver_i2c/: i2c_common.c  i2c_master.c  i2c_slave.c
components/esp_driver_i2s/: CMakeLists.txt  i2s_common.c  i2s_pdm.c  i2s_private.h  i2s_std.c  i2s_tdm.c
components/esp_driver_i3c/: CMakeLists.txt  linker.lf
components/esp_driver_jpeg/: CMakeLists.txt  jpeg_decode.c  jpeg_encode.c
components/esp_driver_parlio/: linker.lf
components/esp_driver_twai/: CMakeLists.txt  esp_twai_onchip.c
components/esp_eth/: CMakeLists.txt
components/esp_hal_ana_conv/: CMakeLists.txt  adc_hal.c
components/esp_hal_dma/: CMakeLists.txt
components/esp_hal_gpspi/: spi_slave_hd_hal.c
components/esp_hal_jpeg/: CMakeLists.txt
components/esp_hal_ledc/: ledc_hal_iram.c
components/esp_hal_mspi/: CMakeLists.txt  spi_flash_hal_common.inc
components/esp_hal_pmu/: CMakeLists.txt
components/esp_hal_security/: ecdsa_hal.c
components/esp_hal_usb/: usb_dwc_hal.c
components/esp_http_client/: Kconfig  esp_http_client.c
components/esp_http_server/: Kconfig
components/esp_hw_support/: CMakeLists.txt  Kconfig  adc_share_hw_ctrl.c  esp_memory_utils.c  hw_random.c  intr_alloc.c  linker.lf  modem_clock.c  periph_ctrl.c  rtc_module.c  sleep_gpio.c  sleep_modem.c  sleep_modes.c  sleep_system_peripheral.c  sleep_uart.c  sleep_usb.c  sleep_wake_stub.c
components/esp_libc/: CMakeLists.txt
components/esp_partition/: CMakeLists.txt  partition.c
components/esp_phy/: linker_esp32hxx.lf
components/esp_pm/: CMakeLists.txt  linker.lf  pm_impl.c
components/esp_psram/: CMakeLists.txt
components/esp_rom/: CMakeLists.txt
components/esp_stdio/: stdio_vfs.c
components/esp_system/: CMakeLists.txt  Kconfig  hw_stack_guard.c  int_wdt.c  startup.c  startup_funcs.c  system_init_fn.txt
components/esp_usb_cdc_rom_console/: vfs_cdcacm.c
components/esp_wifi/: CMakeLists.txt  Kconfig
components/freertos/: Kconfig  linker.lf
components/hal/: CMakeLists.txt  adc_oneshot_hal.c  cache_hal.c  ecdsa_hal.c  emac_hal.c  gdma_hal_axi.c  spi_hal.c  twai_hal_v1.c  twai_hal_v2.c
components/mbedtls/: CMakeLists.txt  Kconfig
components/newlib/: CMakeLists.txt
components/openthread/: CMakeLists.txt  Kconfig  srcs_ftd_mtd.cmake  srcs_radio.cmake
components/sdmmc/: sdmmc_cmd.c  sdmmc_common.c  sdmmc_common.h  sdmmc_init.c  sdmmc_sd.c
components/soc/: CMakeLists.txt
components/spi_flash/: CMakeLists.txt  Kconfig  cache_utils.c  esp_flash_api.c  esp_flash_spi_init.c  flash_brownout_hook.c  flash_ops.c  linker.lf  spi_flash_chip_generic.c  spi_flash_os_func_app.c
components/tcp_transport/: transport_ssl.c  transport_ws.c
components/ulp/: CMakeLists.txt  Kconfig
components/usb/: usb_host.c
components/vfs/: vfs.c
components/wpa_supplicant/: CMakeLists.txt
components/xtensa/: xtensa_vectors.S
docs/: conf_common.py  page_redirects.txt
docs/docs_not_updated/: esp32c5.txt  esp32c61.txt  esp32h21.txt  esp32h4.txt  esp32p4.txt
docs/doxygen/: Doxyfile  Doxyfile_esp32p4  Doxyfile_esp32s31
docs/en/: COPYRIGHT.rst
docs/zh_CN/: COPYRIGHT.rst
examples/bluetooth/: .build-test-rules.yml
examples/bluetooth/esp_ble_audio/cap/initiator/main/: CMakeLists.txt  Kconfig.projbuild  cap_initiator.h  cap_initiator_broadcast.c  cap_initiator_tx.c  cap_initiator_unicast.c  main.c
examples/ethernet/: .build-test-rules.yml
tools/: idf.py  idf_tools.py  tools.json
(+1791 files in other folders)
